# whisper-transcription

./: pyproject.toml
