[tool.poetry]
name = "whisper-transcription"
version = "0.1.0"
description = ""
authors = ["Stéphane Burwash <sburwash@live.ca>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
setuptools-rust = "^1.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
